epub4j-native/cpp/include/epub_native.h

// ============================================================================
// Error Codes
// ============================================================================

typedef enum {
    EPUB_NATIVE_SUCCESS = 0,
    EPUB_NATIVE_ERROR_PARSE = 1,
    EPUB_NATIVE_ERROR_IO = 2,
    EPUB_NATIVE_ERROR_MEMORY = 3,
    EPUB_NATIVE_ERROR_INVALID_ARG = 4,
    EPUB_NATIVE_ERROR_NOT_FOUND = 5,
    EPUB_NATIVE_ERROR_NAMESPACE = 6
} EpubNativeError;
typedef struct EpubNativeArchive EpubNativeArchive;
/**
 * Free string array returned by archive functions
 * @param entries Array to free
 * @param count Count of entries
 */
EPUB_NATIVE_API void epub_native_archive_free_string_array(
    char** entries,
    size_t count
);
/**
 * Read a file entry from the archive
 * @param archive Archive handle
 * @param entry_path Path of entry to read
 * @param out_data Output data bytes (caller must free with epub_native_string_free)
 * @param out_data_length Output data length
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_archive_read_entry(
    EpubNativeArchive* archive,
    const char* entry_path,
    char** out_data,
    size_t* out_data_length
);
/**
 * Check if archive entry exists
 * @param archive Archive handle
 * @param entry_path Path to check
 * @return EPUB_NATIVE_SUCCESS if exists, EPUB_NATIVE_ERROR_NOT_FOUND otherwise
 */
EPUB_NATIVE_API EpubNativeError epub_native_archive_entry_exists(
    EpubNativeArchive* archive,
    const char* entry_path
);
/**
 * Check if JPEG processing support (libjpeg-turbo) is compiled in
 * @return 1 if available, 0 otherwise
 */
EPUB_NATIVE_API int epub_native_image_has_jpeg(void);
/**
 * Check if PNG processing support (libpng) is compiled in
 * @return 1 if available, 0 otherwise
 */
EPUB_NATIVE_API int epub_native_image_has_png(void);
/**
 * Check if WebP processing support (libwebp) is compiled in
 * @return 1 if available, 0 otherwise
 */
EPUB_NATIVE_API int epub_native_image_has_webp(void);
/**
 * Read image dimensions and format without full decode
 * @param data Image file bytes
 * @param data_length Length of data
 * @param out_width Output image width
 * @param out_height Output image height
 * @param out_format Output image format (EPUB_NATIVE_IMAGE_FORMAT_*)
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_image_get_dimensions(
    const uint8_t* data,
    size_t data_length,
    int* out_width,
    int* out_height,
    int* out_format
);
/**
 * Lossless JPEG optimization: progressive encoding + Huffman table optimization.
 * Uses coefficient-level transform to avoid generation loss.
 * @param data JPEG file bytes
 * @param data_length Length of data
 * @param out_data Output optimized JPEG bytes (caller must free with epub_native_image_data_free)
 * @param out_length Output length
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_jpeg_optimize(
    const uint8_t* data,
    size_t data_length,
    uint8_t** out_data,
    size_t* out_length
);
/**
 * Lossy JPEG re-compression at a target quality level.
 * Decodes to pixels then re-encodes.
 * @param data JPEG or PNG or WebP file bytes (any supported input format)
 * @param data_length Length of data
 * @param quality JPEG quality 1-100
 * @param progressive 1 for progressive JPEG, 0 for baseline
 * @param out_data Output JPEG bytes (caller must free with epub_native_image_data_free)
 * @param out_length Output length
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_jpeg_compress(
    const uint8_t* data,
    size_t data_length,
    int quality,
    int progressive,
    uint8_t** out_data,
    size_t* out_length
);
/**
 * Optimize PNG: strip ancillary chunks, re-compress with maximum effort.
 * @param data PNG file bytes
 * @param data_length Length of data
 * @param strip_ancillary 1 to strip non-critical chunks, 0 to preserve
 * @param out_data Output PNG bytes (caller must free with epub_native_image_data_free)
 * @param out_length Output length
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_png_optimize(
    const uint8_t* data,
    size_t data_length,
    int strip_ancillary,
    uint8_t** out_data,
    size_t* out_length
);
/**
 * Encode raw RGBA pixels to WebP
 * @param rgba_pixels Raw RGBA pixel data (4 bytes per pixel)
 * @param width Image width
 * @param height Image height
 * @param stride Row stride in bytes (typically width * 4)
 * @param quality Lossy quality 0-100, or -1 for lossless
 * @param out_data Output WebP bytes (caller must free with epub_native_image_data_free)
 * @param out_length Output length
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_webp_encode(
    const uint8_t* rgba_pixels,
    int width,
    int height,
    int stride,
    int quality,
    uint8_t** out_data,
    size_t* out_length
);